--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10252,3 +10252,15 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+html {
+  font-size: 16px;
+}
+
+.page__main {
+  min-height: 75vh;
+}
+.page__main h1, .page__main .h1 {
+  font-size: 10rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
