--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,18 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+html {
+    font-size: 16px;
+}
+
+.page__main {
+
+    min-height: 75vh;
+
+    h1 {
+        font-size: 10rem;
+        font-weight: 700;
+        text-transform: uppercase;
+    }
+}
