--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,7 +1,11 @@
 // Body
-$body-bg: #f8fafc;
+$body-bg: #F2F2F2;
 
 // Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
-$font-size-base: 0.9rem;
+
+$font-family-sans-serif: 'Lato', sans-serif;
+$font-size-base: 1rem;
 $line-height-base: 1.6;
+
+$primary: #F23D3D;
+$light: #B5D99C;
