--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,5 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
 
 // Variables
 @import 'variables';
@@ -11,6 +11,11 @@ html {
     font-size: 16px;
 }
 
+h1 {
+    font-weight: 700;
+    font-size: 6rem;
+}
+
 .page__main {
 
     min-height: 75vh;
@@ -19,5 +24,6 @@ html {
         font-size: 10rem;
         font-weight: 700;
         text-transform: uppercase;
+        color: $primary;
     }
 }
