add single book page, tostify flash messages, single book resource

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,5 +1,6 @@
 // Body
-$body-bg: #F2F2F2;
+$body-bg: #B8D3D9;
+// $body-bg: #F2F2F2;
 
 // Typography
 
@@ -7,5 +8,6 @@ $font-family-sans-serif: 'Lato', sans-serif;
 $font-size-base: 1rem;
 $line-height-base: 1.6;
 
-$primary: #F23D3D;
+$primary: #D93E30;
 $light: #B5D99C;
+$secondary: #5D8C84;
