--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -8,6 +8,9 @@ $font-family-sans-serif: 'Lato', sans-serif;
 $font-size-base: 1rem;
 $line-height-base: 1.6;
 
+$md: '768px';
+$lg: '992px';
+
 $primary: #D93E30;
 $light: #B5D99C;
 $secondary: #5D8C84;
