--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,11 +14,19 @@
 html {
     font-size: 16px;
     color: #260101;
+
+    @media(max-width:$md) {
+        font-size: 14px;
+    }
 }
 
 h1 {
     font-size: 6rem;
     color: $primary;
+
+    @media(max-width:$md) {
+        font-size: 3rem;
+    }
 }
 
 h1,
@@ -55,5 +63,9 @@ h3.no-wrap {
         font-weight: 700;
         text-transform: uppercase;
         color: $primary;
+
+        @media(max-width:$md) {
+            font-size: 4rem;
+        }
     }
 }
